title screen and highscore screen

--- a/BlueStarRedStar/Menus/MenuGameOver.xib
+++ b/BlueStarRedStar/Menus/MenuGameOver.xib
@@ -33,12 +33,21 @@
                         <action selector="restartPressed:" destination="-1" eventType="touchUpInside" id="k2T-fC-dyO"/>
                     </connections>
                 </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4fB-fA-Czr">
+                    <rect key="frame" x="172.5" y="358" width="30" height="30"/>
+                    <state key="normal" title="Title"/>
+                    <connections>
+                        <action selector="pressedTitle:" destination="-1" eventType="touchUpInside" id="sz2-cT-Hig"/>
+                    </connections>
+                </button>
             </subviews>
             <constraints>
                 <constraint firstItem="nMb-Fo-Pg6" firstAttribute="centerX" secondItem="vUN-kp-3ea" secondAttribute="centerX" id="GRA-34-E8J"/>
                 <constraint firstItem="JnE-P5-Vwy" firstAttribute="centerY" secondItem="vUN-kp-3ea" secondAttribute="centerY" id="Mxn-Bq-gGd"/>
+                <constraint firstItem="4fB-fA-Czr" firstAttribute="top" secondItem="nMb-Fo-Pg6" secondAttribute="bottom" constant="16" id="g8a-xe-AkN"/>
                 <constraint firstItem="nMb-Fo-Pg6" firstAttribute="top" secondItem="JnE-P5-Vwy" secondAttribute="bottom" constant="16" id="nMd-Rt-NhS"/>
                 <constraint firstItem="JnE-P5-Vwy" firstAttribute="centerX" secondItem="vUN-kp-3ea" secondAttribute="centerX" id="sE7-Bf-sRH"/>
+                <constraint firstItem="4fB-fA-Czr" firstAttribute="centerX" secondItem="vUN-kp-3ea" secondAttribute="centerX" id="syH-Kp-EDZ"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
