--- a/BlueStarRedStar/Menus/MenuTitle.xib
+++ b/BlueStarRedStar/Menus/MenuTitle.xib
@@ -13,6 +13,9 @@
         <array key="Simply Rounded Italic.ttf">
             <string>SimplyRounded-Italic</string>
         </array>
+        <array key="pure_and_simple_everytime.ttf">
+            <string>pureandsimpleeverytime</string>
+        </array>
     </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MenuTitleView" customModule="BlueStarRedStar" customModuleProvider="target">
@@ -28,34 +31,35 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zt1-Pd-Cxt">
-                    <rect key="frame" x="173" y="357" width="30" height="30"/>
+                    <rect key="frame" x="165" y="357" width="47" height="39"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <fontDescription key="fontDescription" name="pureandsimpleeverytime" family="pure and simple everytime" pointSize="24"/>
                     <state key="normal" title="Play">
-                        <color key="titleColor" red="0.84665006399999998" green="0.13121607730000001" blue="0.1154940854" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </state>
                     <connections>
                         <action selector="pressedPlay:" destination="-1" eventType="touchUpInside" id="TO0-iV-Q5w"/>
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vgz-bD-tar">
-                    <rect key="frame" x="145" y="409" width="84" height="30"/>
+                    <rect key="frame" x="134" y="409" width="113" height="39"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <fontDescription key="fontDescription" name="pureandsimpleeverytime" family="pure and simple everytime" pointSize="24"/>
                     <state key="normal" title="High Scores">
-                        <color key="titleColor" red="0.84665006399999998" green="0.13121607730000001" blue="0.1154940854" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </state>
                     <connections>
                         <action selector="pressedHighScores:" destination="-1" eventType="touchUpInside" id="orB-Wm-Fp7"/>
                     </connections>
                 </button>
                 <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="c4a-sl-poj">
-                    <rect key="frame" x="77" y="240" width="240" height="54"/>
+                    <rect key="frame" x="44" y="291" width="285" height="47"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Star Twins" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bqH-a4-Y9O">
-                            <rect key="frame" x="37" y="9" width="165" height="35"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Star Twins" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bqH-a4-Y9O">
+                            <rect key="frame" x="30" y="0.0" width="224.5" height="47"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <fontDescription key="fontDescription" name="SimplyRounded-Italic" family="Simply Rounded" pointSize="33"/>
-                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <fontDescription key="fontDescription" name="SimplyRounded-Italic" family="Simply Rounded" pointSize="45"/>
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
